k8s/apps/default/plex/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      priorityClassName: cluster-p0
      resourceClaims:
        - name: gpu
          resourceClaimTemplateName: plex-gpu
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 3005
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: [3005]
      volumes:
        - name: transcode
          emptyDir: {}
        - name: logs
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: plex
        - name: cache
          persistentVolumeClaim:
            claimName: plex-cache
        - name: arr-media
          nfs:
            server: nas.cbannister.casa
            path: /mnt/bighorse/arr
            readOnly: true
      containers:
        - name: plex
          image: ghcr.io/home-operations/plex:1.43.4.10903@sha256:fdc6fe82bc7d8acd08fc0aa581fcb76722803ba5905e2537135a697347dd6149
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              memory: 4Gi
            claims:
              - name: gpu
          ports:
            - containerPort: 32400
              name: plex
          volumeMounts:
            - name: transcode
              mountPath: /transcode
            - name: config
              mountPath: /config
            - name: logs
              mountPath: /config/Library/Application Support/Plex Media Server/Logs
            - name: cache
              mountPath: /config/Library/Application Support/Plex Media Server/Cache
            - name: arr-media
              mountPath: /data/media
              subPath: media/
            - name: arr-media
              mountPath: /data/media/sports/tennis
              subPath: downloads/torrents/complete/sports/tennis
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
          livenessProbe: &livenessProbe
            httpGet:
              path: /identity
              port: plex
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *livenessProbe
          startupProbe: *livenessProbe
