k8s/apps/default/plex/app/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
spec:
  serviceName: plex
  replicas: 1
  selector:
    matchLabels:
      app: plex
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteMany
        resources:
          requests:
            storage: 100Gi
        storageClassName: ceph-filesystem
        volumeMode: Filesystem
  template:
    metadata:
      labels:
        app: plex
    spec:
      runtimeClassName: nvidia
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      nodeSelector:
        nas: local
      volumes:
        - name: transcode
          emptyDir: {}
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
            readOnly: true
      containers:
        - name: plex
          image: ghcr.io/onedr0p/plex:1.40.5.8854-f36c552fd@sha256:b9c296227e318d81b62873aebfb25ba78685b65546e47a4840d31dd501504f1c
          resources:
            requests:
              cpu: 1000m
              memory: 4096Mi
              nvidia.com/gpu: 1
            limits:
              memory: 4096Mi
              nvidia.com/gpu: 1
          ports:
            - containerPort: 32400
              name: plex
          volumeMounts:
            - name: transcode
              mountPath: /transcode
            - name: config
              mountPath: /config
            - name: arr-media
              mountPath: /data
          livenessProbe: &livenessProbe
            httpGet:
              path: /identity
              port: plex
              initialDelaySeconds: 0
              periodSeconds: 10
              timeoutSeconds: 1
              failureThreshold: 3
          readinessProbe: *livenessProbe
          startupProbe: *livenessProbe
