k8s/apps/default/plex/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  annotations:
    io.cilium/lb-ipam-ips: 192.168.42.203
spec:
  selector:
    app: plex
  type: LoadBalancer
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 80
      targetPort: web
      protocol: TCP
    - name: plex
      port: 32400
      targetPort: web
      protocol: TCP
