k8s/apps/default/plex/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app plex
spec:
  hostnames:
    - plex.cbannister.xyz
  parentRefs:
    - name: external-cbannister-xyz
      namespace: network
      kind: ListenerSet
      sectionName: https
  rules:
    - backendRefs: &backend
        - name: *app
          port: 80
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set: &pipeline
              # Let Envoy manage pooled connections instead of Plex closing them after 20s idle.
              - name: X-Plex-Http-Pipeline
                value: infinite
            remove: ["Range"]
      matches:
        - path:
            type: PathPrefix
            value: /library/streams
    - backendRefs: *backend
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set: *pipeline
